fix: final uploads
Signed-off-by: Spazzy <brendankamp757@gmail.com>

--- a/dayone.html
+++ b/dayone.html
@@ -80,12 +80,13 @@
           <p class="content"><strong>Walking a Fine Line</strong>, abcde Flash, 2019, Switzerland, 4'</p>
           <p class="content"><strong>Study Meeting</strong>, Sakura Ardila Ortiz, 2023, Colombia, 3’</p>
           <p class="content"><strong>Jackob et Jim</strong>, Wolfgang Wisely, 2022, UK, 2'</p>
-          <p class="content"><strong>Archiving Men</strong>, Ryu Ill-don, 20 min, South Korea</p>
+          <p class="content"><strong>Archiving Men</strong>, Ryu Ill-don, 2022, South Korea, 20’</p>
           <p class="content"><strong>Naked Snail</strong>, Geun-yeoung Kang, 2023, The Netherlands, 6’</p>
           <p class="content"><strong>Auntie Fernanda</strong>, Neoza Goffin, 2021, Belgium, 2’</p>
           <p class="content"><strong>OCTOPUSS</strong>, Oil Productions, 2022, Switzerland, 10’</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>84’</strong></p>
+          <p class="content"><a href="https://www.amsterdamalternative.nl/agenda/15243/cheeky-sneak-peek">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -106,7 +107,8 @@
           <p class="content"><strong>Orgy #004: Fuck Your Friends</strong>, AORTA films, 2023, US, 16'</p>
           <p class="content"><strong>Asphyxia</strong>, Noel Alejandro, 2021, Germany, 10'</p>
           <br/>
-          <p class="content">Total duration:&nbsp;&nbsp;<strong>84’</strong></p>
+          <p class="content">Total duration:&nbsp;&nbsp;<strong>78’</strong></p>
+          <p class="content"><a href="https://www.amsterdamalternative.nl/agenda/15225/electric-bodies">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -124,6 +126,7 @@ Also, Toni Karat is here! As the director of the award-winning feature documenta
           <p class="content"><strong>Klappe</strong>, Jürgen Brüning, 2022, Germany, 64’</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>68’</strong></p>
+          <p class="content"><a href="https://www.amsterdamalternative.nl/agenda/15226/holy-fuck-berlin">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -140,8 +143,11 @@ Join us for an evening of celebration as we launch the festival with a night of 
       </div>
       <hr/>
       <div class="row sponsors mt-3 pt-2 px-2 pb-2 justify-content-center">
-        <div class="col-10 col-lg-4 mx-1 pe-lg-0 me-lg-0 align-self-center">
-          <h3>Made possible with support from:</h3>
+        <div class="col-10 col-lg-2 mx-1 pe-lg-0 me-lg-0 align-self-center">
+          <h5>made possible with support from:</h5>
+        </div>
+        <div class="col-8 col-lg-2">
+          <img src="./images/sponsor_five.jpg" class="img-fluid" />
         </div>
         <div class="col-8 col-lg-1">
           <img src="./images/sponsor_one.png" class="img-fluid" />
