--- a/daythree.html
+++ b/daythree.html
@@ -83,6 +83,7 @@ This second selection of Written in the Body opens with AUTOAGGRESSION, an extra
           <p class="content"><strong>AFTER MATTER COMES ENERGY</strong>, Nour Beetch & Nicky Lapierre, 2021, Belgium, 18'</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>76'</strong></p>
+          <p class="content"><a href="https://www.amsterdamalternative.nl/agenda/15232/written-in-the-body-ii">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -91,12 +92,21 @@ This second selection of Written in the Body opens with AUTOAGGRESSION, an extra
           <img src="./images/program/day-03-02.jpg" class="img-fluid" /> <br />
         </div>
         <div class="col-lg-4 col-10 ms-5">
-          <h2 class="content">PILLOW TALKS WITH STRANGERS | 16:00 | Filmhuis Cavia</h2>
+          <h2 class="content">PILLOW TALK WITH STRANGERS | 16:00 | Filmhuis Cavia</h2>
           <p class="content">
-          Polly Barton’s new book Porn: An Oral History (Fitzcarraldo 2023) is a series of frank interviews between Polly and various friends and acquaintances, discussing how they feel about porn – personally, ethically, politically. Come join Polly and the Supernormal collective as we take the book live: we’ll be talking about writing porn, watching porn, making porn and all the feelings in between. 
-Polly Barton is a writer and Japanese translator based in Bristol in the UK, and the author of Porn: An Oral History.
-Supernormal is a queer feminist literary collective based in Amsterdam.
-          </p>
+          Polly Barton’s</strong> new book Porn: An Oral History
+          (Fitzcarraldo 2023) is a series of frank interviews between Polly and
+          various friends and acquaintances, discussing how they feel about
+          porn – personally, ethically, politically. Come join Polly and the
+          Supernormal collective as we take the book live: we’ll be talking
+          about writing porn, watching porn, making porn and all the feelings
+          in between.</p>
+          <p class="content">
+          <strong>Polly Barton</strong> is a writer and Japanese translator
+          based in Bristol in the UK, and the author of Porn: An Oral
+          History.</p>
+          <p class="content">
+          <a href="https://www.instagram.com/supernormalbooks/">Supernormal</a> is a queer feminist literary collective based in Amsterdam.</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>90'</strong></p>
           <p class="content"><strong>Free entrance</strong></p>
@@ -121,14 +131,18 @@ Diego’s talk will be illustrated with videos of the performances from Javier T
           <p class="content"><strong>Diego Galdo-González</strong> is a Junior Lecturer in Latin American and Global Studies at the Center for Latin American Research and Documentation of the University of Amsterdam, CEDLA. He has worked as a coordinator for the Amsterdam Research Centre for Gender & Sexuality and as a junior lecturer for the department of Sociology at the University of Amsterdam. His research interests lie at the intersection of sexual history, sexual cultures, and urban studies in Peru. His RM thesis aimed to trace the history of marica and queer pleasure in Lima between the 1950s and 1980s. He has published articles in GLQ: A Journal of Gay and Lesbian Studies and Argumentos, the journal of the Instituto de Estudios Peruanos.
 </p>
           <p class="content"><strong>5 min break</strong></p>
-          <p class="content"><strong>Enter the War</strong>, Anti Gonna, 2017, Ukraine, 4’</p>
+          <p class="content"><strong>Enter the War</strong>, AntiGonna, 2017, Ukraine, 4’</p>
           <p class="content"><strong>Fuck the Fascism: The Crossroad of Two Worlds</strong>, Maria Basura, 2019,  Chile & Spain, 10’</p>
           <p class="content"><strong>Sarx</strong>, Viola V, 2023, Macedonia, 2’</p>
-          <p class="content"><strong>El día que la galaxia vulvosa casi pierde sus orgasmos</strong>, Al Borde producciones, 2023, Mexico, Colombia, 10’</p>
+          <p class="content"><strong>El día que la galaxia vulvosa casi pierde
+            sus orgasmos</strong>, Al Borde producciones, 2023, Mexico,
+          Colombia, 10’*</p>
           <p class="content"><strong>Indómito Deseo</strong>, Diego Argote, 2022, Chile, 4’</p>
-          <p class="content"><strong>Lost in Freedom</strong>, Anti Gonna, 2022, Ukraine, 8’</p>
+          <p class="content"><strong>Lost in Freedom</strong>, AntiGonna, 2022, Ukraine, 8’</p>
+          <p class="content">*Programmed with the support of Al Borde, International Transfeminist Film Festival <a href="https://festicine.mujeresalborde.org">https://festicine.mujeresalborde.org</a></p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;85’</p>
+          <p class="content"><a href="https://www.amsterdamalternative.nl/agenda/15234/decolonizing-our-bodies-our-worlds-talk">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -151,6 +165,7 @@ Diego’s talk will be illustrated with videos of the performances from Javier T
           <p class="content"><strong>Archiving Men</strong>, Ryu Ill-don, 2022, South Korea, 21’</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>66'</strong></p>
+          <p class="content"><a href="https://www.uitkijk.nl/film/porn-film-festival-amsterdam-be-water-my-love">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -198,6 +213,7 @@ So, buckle up loves, you‘re in for a ride. The screening will preview the film
           <p class="content"><strong>Ghost Song</strong>, RTALIN & JorgeTheObscene, 2023, Germany, 3'</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>79'</strong></p>
+          <p class="content"><a href="https://www.amsterdamalternative.nl/tickets/15236">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -221,6 +237,7 @@ So, buckle up loves, you‘re in for a ride. The screening will preview the film
            <p class="content"><strong>Baby</strong>, Manon Praline & Evie Snax, 2018, Germany & USA, 8’</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>80'</strong></p>
+          <p class="content"><a href="https://www.uitkijk.nl/film/porn-film-festival-amsterdam-go-fuck-yourself">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -287,8 +304,11 @@ Smut Slam, a community storytelling evening all about sex.
       </div>
       <hr/>
       <div class="row sponsors mt-3 pt-2 px-2 pb-2 justify-content-center">
-        <div class="col-10 col-lg-4 mx-1 pe-lg-0 me-lg-0 align-self-center">
-          <h3>Made possible with support from:</h3>
+        <div class="col-10 col-lg-2 mx-1 pe-lg-0 me-lg-0 align-self-center">
+          <h5>made possible with support from:</h5>
+        </div>
+        <div class="col-8 col-lg-2">
+          <img src="./images/sponsor_five.jpg" class="img-fluid" />
         </div>
         <div class="col-8 col-lg-1">
           <img src="./images/sponsor_one.png" class="img-fluid" />
