--- a/daytwo.html
+++ b/daytwo.html
@@ -78,10 +78,11 @@
           <p class="content"><strong>Extys</strong>, Oil Productions, 2023, Argentina, 14’</p>
           <p class="content"><strong>Automaton</strong>, Four Chambers, 2021, UK, 16’</p>
           <p class="content"><strong>Fucking Freaks Club</strong>, Nour Beetch & Nicky Lapierre, 2022, Belgium, 18’</p>
-          <p class="content"><strong>Adonia</strong>, Iztok Klančar, 2023, The Netherlands, 4’</p>
-          <p class="content"><strong>Mutant Island</strong>,  Szreder/Zwirek, 2024, Poland, 19'</p>
+          <p class="content"><strong>Adonia</strong>, Iztok Klančar & Belle Dommage, 2023, The Netherlands, 4’</p>
+          <p class="content"><strong>Mutant Island</strong>, Rafał Żwirek & Aga Szreder, 2024, Poland, 19'</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>76’</strong></p>
+          <p class="content"><a href="https://www.amsterdamalternative.nl/agenda/15227/fuck-me-to-the-moon-and-back">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -96,12 +97,13 @@
 
 After the films, we will have a conversation with local activists and sex workers fighting against the gentrification of the Red Light District, and the project of marginalizing sex work even more through the construction of a centre for prostitution on the outskirts of Amsterdam.
           </p>
-          <p class="content"><strong>Levidis Fucking Conflicts</strong>, 2023, Germany, 11’</p>
+          <p class="content"><strong>Levidis</strong>, Fucking Conflicts, 2023, Germany, 11’</p>
           <p class="content"><strong>Gentrificacao</strong>, Bruna Kury, 2020, Brazil, 10’</p>
           <p class="content"><strong>Say it again: “I love the police”</strong>, Puppy Please, 2023, France, 18’</p>
           <p class="content"><strong>Fuck the Fascism</strong>, Maria Basura, 2016, Chile, Spain, Germany, 8’</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>48’ of films | 40’ discussion</strong></p>
+          <p class="content"><a href="https://www.amsterdamalternative.nl/agenda/15228/sex-in-the-city">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -117,12 +119,13 @@ These are the films we fought about, slammed doors over and couldn’t get on th
 When you can’t choose between other blocks, come on over to *Darlings*.
           </p>
           <p class="content"><strong>Pieprzę to (Fuck it)</strong>, Grupa Dochodzę, 2022, Poland, 36'</p>
-          <p class="content"><strong>Envy</strong>, Carmina, 2022, France, 18'</p>
           <p class="content"><strong>Dyspnea</strong>, Viola V, 2014, Australia, 3'</p>
+          <p class="content"><strong>Envy</strong>, Carmina, 2022, France, 18'</p>
           <p class="content"><strong>Summer Night’s Fantasy</strong>, Guby Moon, 2022, Spain, 5'</p> 
           <p class="content"><strong>Merci Madame Manon</strong>, Manon Praline, 2021, Germany, 21'</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>83’</strong></p>
+          <p class="content"><a href="https://www.amsterdamalternative.nl/agenda/15229/darlings">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -147,6 +150,7 @@ This first selection opens with the stunning Homem de Verdade, a sexual coming-o
           <p class="content"><strong>After Work</strong>, Jan Soldat, 2023, Austria, 5'</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>80’</strong></p>
+          <p class="content"><a href="https://www.uitkijk.nl/film/porn-film-festival-amsterdam-written-in-the-body-i">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -162,13 +166,14 @@ This first selection opens with the stunning Homem de Verdade, a sexual coming-o
           <p class="content"><strong>Input Error I</strong>, Fucking Conflicts, 2021, Germany, 14’</p>
           <p class="content"><strong>A Cyborg Manifesto</strong>, Four Chambers, 2020, UK, 5’</p>
           <p class="content"><strong>Cables</strong>, Thomas Diafas, 2022, Greece, 10’</p>
-          <p class="content"><strong>Musing Of A Mechatronic Mistress: The Peculiar Purpose Of Tiffany The Sex Robot</strong>, Jasmin Hagendorfer, 2023, Austria, 24’</p>
+          <p class="content"><strong>The Peculiar Purpose Of Tiffany The Sex Robot</strong>, Jasmin Hagendorfer, 2023, Austria, 24’</p>
           <p class="content"><strong>FIRST TIME</strong>, Sakura Ardila Ortiz, 2022-2023, Colombia, 5’</p>
           <p class="content"><strong>Projection of Porn</strong>, Celeste Fitts, 2023, Italy, 7’</p>
           <p class="content"><strong>Input Error II</strong>, Fucking Conflicts, 2023, Germany, 22’</p>
           <p class="content"><strong>Entrena tu perra</strong>, Sakura Ardila Ortiz, 2023, Colombia 10’</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>97’</strong></p>
+          <p class="content"><a href="https://www.amsterdamalternative.nl/agenda/15230/hey-ggle-tie-me-up">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -181,7 +186,7 @@ This first selection opens with the stunning Homem de Verdade, a sexual coming-o
           <p class="content">
           Power dynamics affect multiple aspects of our lives both in and outside of the bedroom, yet they’re often not openly engaged with. Many fantasies and desires are considered taboo, somehow too confrontational for society at large. Mindfully facing one’s own vulnerabilities by testing personal boundaries and exploring fantasies can bring an unparalleled sense of trust, complexity, and deep connection for those willing to embark on this journey of self-discovery. The films in Kinkystraat aim to challenge some of the misconceptions around BDSM practices, while simultaneously shedding light on the beauty and complexity of these desires, the intricate arts of pleasure, and embracing the freedom to express one’s authentic self.
           </p>
-          <p class="content"><strong>Shibari Turk ll</strong>, Kurtulmuz, 2023, Türkiye & Austria, 6'</p>
+          <p class="content"><strong>Shibari Turk ll</strong>, Yavuz Kurtulmuz, 2023, Türkiye & Austria, 6'</p>
           <p class="content"><strong>Switch for Daddy</strong>, Mahx Capacity, 2023, US, 17’</p> 
           <p class="content"><strong>Exxxtasy</strong>, Emy Fem & Bear Silver, 2022, The Netherlands, 9’</p> 
           <p class="content"><strong>home is not a harbor</strong>, Kaya Jaloza, 2022, Poland, 4’</p>
@@ -192,6 +197,7 @@ This first selection opens with the stunning Homem de Verdade, a sexual coming-o
           <p class="content"><strong>Alchemy of the Meat</strong>, Mahx Capacity, 2023, US, 8'</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>71’</strong></p>
+          <p class="content"><a href="https://www.uitkijk.nl/film/porn-film-festival-amsterdam-kinkystraat">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -214,13 +220,17 @@ This first selection opens with the stunning Homem de Verdade, a sexual coming-o
           <p class="content"><strong>The Confession</strong>, GoAskAlex & Vesperal, 2022, Canada, 4'</p>
           <p class="content"><strong>THE SHADOWS THAT INHABIT ME</strong>, Alexandre Medeiros, 2023, Brazil, 14'</p>
           <br/>
-          <p class="content">Total duration:&nbsp;&nbsp;<strong>68’</strong></p>
+          <p class="content">Total duration:&nbsp;&nbsp;<strong>66’</strong></p>
+          <p class="content"><a href="https://www.amsterdamalternative.nl/agenda/15231/rapture">Bookings</a></p>
         </div>
       </div>
       <hr/>
       <div class="row sponsors mt-3 pt-2 px-2 pb-2 justify-content-center">
-        <div class="col-10 col-lg-4 mx-1 pe-lg-0 me-lg-0 align-self-center">
-          <h3>Made possible with support from:</h3>
+        <div class="col-10 col-lg-2 mx-1 pe-lg-0 me-lg-0 align-self-center">
+          <h5>made possible with support from:</h5>
+        </div>
+        <div class="col-8 col-lg-2">
+          <img src="./images/sponsor_five.jpg" class="img-fluid" />
         </div>
         <div class="col-8 col-lg-1">
           <img src="./images/sponsor_one.png" class="img-fluid" />
