--- a/venues.html
+++ b/venues.html
@@ -77,8 +77,6 @@
         <p class="content"><strong>Presale</strong> for screenings at de Uitkijk: <a href="https://www.uitkijk.nl">https://www.uitkijk.nl</a></p>
          <p class="content">
           Each day there will be a limited number of tickets available at the bar of the two cinemas. You can get them on the day and location of the screening itself. Cineville cards are accepted at both locations.
-
-          Cineville reservations however, are currently only possible for screenings at de Uitkijk.
           </p>
           <hr/>
 
@@ -163,6 +161,26 @@
           first floor with stairs, and is therefore unfortunately not easily
           accessible for people with reduced mobility.</p>
 
+          <hr/>
+
+          <h3 class="content">Potential trigger warning</h3>
+
+          <p class="content">We considered adding specific trigger warnings to
+          each block but soon realised how personal triggers are. While one
+          person might be turned on by dolls and clowns, another might not be
+          able to stand it. The same goes for guns, needles, dentists, vomiting
+          and everything in between.</p>
+
+          <p class="content">So this is a warning as well as an invitation. Be
+          aware that the films tackle many different themes and push many
+          boundaries. We use post-porn as a platform to tell stories, express
+          desire, protest and change our frames of reference. Sometimes it’s
+          hot. Sometimes it’s uncomfortable.</p>
+
+          <p class="content">Before each block begins, the programmer will give an introduction that should give you an idea of what to expect. Beyond that, if you are attending a block and have any specific triggers you’d like to check in on, please message us on Instagram. 
+ Also feel free to contact the programmers during the day of the screening. You
+ ask at the bars of Cavia and the Uitkijk for them.</p>
+
         </div>
         <div class="col-1 pe-0 me-0">
         </div>
@@ -171,8 +189,11 @@
         </div>
       </div>
       <div class="row sponsors mt-3 pt-2 px-2 pb-2 justify-content-center">
-        <div class="col-10 col-lg-4 mx-1 pe-lg-0 me-lg-0 align-self-center">
-          <h3>Made possible with support from:</h3>
+        <div class="col-10 col-lg-2 mx-1 pe-lg-0 me-lg-0 align-self-center">
+          <h5>made possible with support from:</h5>
+        </div>
+        <div class="col-8 col-lg-2">
+          <img src="./images/sponsor_five.jpg" class="img-fluid" />
         </div>
         <div class="col-8 col-lg-1">
           <img src="./images/sponsor_one.png" class="img-fluid" />
