--- a/about.html
+++ b/about.html
@@ -102,8 +102,11 @@
         </div>
       </div>
       <div class="row sponsors mt-3 pt-2 px-2 pb-2 justify-content-center">
-        <div class="col-10 col-lg-4 mx-1 pe-lg-0 me-lg-0 align-self-center">
-          <h3>Made possible with support from:</h3>
+        <div class="col-10 col-lg-2 mx-1 pe-lg-0 me-lg-0 align-self-center">
+          <h5>Made possible with support from:</h5>
+        </div>
+        <div class="col-8 col-lg-2">
+          <img src="./images/sponsor_five.jpg" class="img-fluid" />
         </div>
         <div class="col-8 col-lg-1">
           <img src="./images/sponsor_one.png" class="img-fluid" />
