--- a/dayfour.html
+++ b/dayfour.html
@@ -74,8 +74,12 @@
           <p class="content">
 A special selection from Filmhuis Cavia's 1990s queer porn tapes played on VHS.
           </p>
+          <p class="content">
+With only 40 seats, Filmhuis Cavia is one of the smallest cinemas in the Netherlands, and the smallest in Amsterdam. They still show some of their films on 16 and 35 mm, but they also have quite a big collection of VHS tapes, some of which are very hot… You could say that porn is an old Cavia-tradition: already in the early days, when the cinema was founded from the squatters’ movement in 1983, Filmhuis Cavia has been showing queer, erotic and sex-positive films. To honour this tradition, we dove into the archive to make a special selection of Cavia's 1990’s queer porn tapes. Get comfy for a nostalgic tv-moment.
+          </p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>72’</strong></p>
+          <p class="content"><a href="https://www.amsterdamalternative.nl/agenda/15239/vhs-porn">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -84,7 +88,7 @@ A special selection from Filmhuis Cavia's 1990s queer porn tapes played on VHS.
           <img src="./images/program/day-04-02.jpg" class="img-fluid" /> <br />
         </div>
         <div class="col-lg-4 col-10 ms-5">
-          <h2 class="content"> BEEN AROUND | 13:00 | Filmhuis Cavia</h2>
+          <h2 class="content"> BEEN AROUND | 15:00 | Filmhuis Cavia</h2>
           <p class="content">
 To say that one has been around the block means that they’re experienced, that they’ve acquired skills and knowledge, that they know what they’re doing. This collection of films explores the beautiful and complex themes of ageing and sexuality while simultaneously challenging stereotypes and highlighting the power of human connection at any age. Sexuality is a lifelong journey, so let’s embrace the joy of being fully alive, no matter what age we are.
           </p>
@@ -97,6 +101,7 @@ To say that one has been around the block means that they’re experienced, that
           <p class="content"><strong>Aunty Fernanda</strong>, Neoza Goffin, 2021, Belgium, 2’</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>88’</strong></p>
+          <p class="content"><a href="https://www.amsterdamalternative.nl/agenda/15240/been-around">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -106,8 +111,10 @@ To say that one has been around the block means that they’re experienced, that
         </div>
         <div class="col-lg-4 col-10 ms-5">
           <h2 class="content">WILD LIFE | 17:00 | Filmhuis Cavia</h2>
-          <p class="content">
-This block is an invitation to visit animal worlds-whether it’s a kinky fantasy like in The Animals Revenge, or a way for understanding how we navigate in herds to protect and love each other like Dino Sluts Rising and The Secret Love Life of the Urban Leopard. Animals have a lot of things to teach us, and one of those is how to be sexually free. 
+          <p class="content">This block is an invitation to visit animal worlds-whether it’s a kinky fantasy
+          like in <i>The Animals Revenge</i>, or a way for understanding how we
+          navigate in herds to protect and love each other like <i>Dino Sluts
+            Rising</i> and <i>The Secret Love Life of the Urban Leopard</i>. Animals have a lot of things to teach us, and one of those is how to be sexually free. 
           </p>
           <p class="content"><strong>The Secret Love Life of the Urban Leopard</strong>, Pina Brutal 2019, Germany, 35’</p>
           <p class="content"><strong>Study Meeting</strong>, Sakura Ardila Ortiz, 2023, Colombia, 3’</p>
@@ -116,7 +123,8 @@ This block is an invitation to visit animal worlds-whether it’s a kinky fantas
           <p class="content"><strong>La Follia</strong>, Wild Cat & Werther Germondari, 2023, Italy, 11’</p>
           <p class="content"><strong>Dino Sluts Rising: 9 to 5 Billion BC</strong>, Vidi Ho, 2022, The Netherlands, 23’</p>
           <br/>
-          <p class="content">Total duration:&nbsp;&nbsp;<strong>68’</strong></p>
+          <p class="content">Total duration:&nbsp;&nbsp;<strong>79’</strong></p>
+          <p class="content"><a href="https://www.amsterdamalternative.nl/agenda/15241/wild-life">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -129,19 +137,20 @@ This block is an invitation to visit animal worlds-whether it’s a kinky fantas
           <p class="content">
 This selection is an ode to the love we make when we have sex. A love song to those hot and steamy encounters that are touching and tender too. Sometimes we fuck hard because we love hard. Sometimes we get all sweaty because our bodies want to melt together. Sometimes sex moves us beyond words. Sometimes we look at our bodies fuck in the mirror and it makes us giggle because it is all so odd and terrifyingly beautiful. Here’s to all the broken-hearted, the crazy-in-love and everyone else who wants to be reminded of the poetry and joy of fucking.
           </p>
-          <p class="content"><strong>A Smut Story</strong>, Julia De Martino, 2021, Germany, 2’</p>
+          <p class="content"><strong>A Smut Story</strong>, Julalala, 2021, Germany, 2’</p>
           <p class="content"><strong>Fucking Esthetisch</strong>, Fucking Esthetisch, 2023, The Netherlands, 7’</p>
           <p class="content"><strong>Liquid love</strong>, Massimo Clemente, 2021, Italy, 7’</p>
-          <p class="content"><strong>Minha Parte / My Part</strong>, Thais de Almeida Prado, 2022, Brazil, 7’</p>
-          <p class="content"><strong>AFTER MATTER COMES ENERGY</strong>, Nour Beetch, 2021, Belgium, 19’</p>
+          <p class="content"><strong>Minha Parte / My Part</strong>, Thaís de Almeida Prado, 2022, Brazil, 7’</p>
+          <p class="content"><strong>AFTER MATTER COMES ENERGY</strong>, Nour Beetch & Nicky Lapierre, 2021, Belgium, 19’</p>
           <p class="content"><strong>Extrasensory</strong>, Ryan Suits, 2019, USA, 9’</p>
           <p class="content"><strong>Cuddle</strong>, Nat Portnoy, Ella Venus & Zina Berlin, 2023, The Netherlands, 6’</p>
           <p class="content"><strong>L’Orange</strong>, Hayes Hoey & Mason Soto, 2022, USA, 8’</p>
           <p class="content"><strong>A Flor de Piel</strong>, Andor Polgar, Sick Ducks, Ju Goma, Andrew Visser, 2022, The Netherlands, 4’</p>
           <p class="content"><strong>Prends-Moi Dans Les Bois / Take Me In The Woods</strong>, Bande James Bond, 2022, Belgium, 4’</p>
-          <p class="content"><strong>IMPÉRIO (EMPIRE)</strong>, Thais de Almeida Prado, 2023, Brazil, 4’</p>
+          <p class="content"><strong>IMPÉRIO/EMPIRE</strong>, Thaís de Almeida Prado, 2023, Brazil, 4’</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>77’</strong></p>
+          <p class="content"><a href="https://www.uitkijk.nl/film/porn-film-festival-amsterdam-touching-touch">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -155,10 +164,11 @@ This selection is an ode to the love we make when we have sex. A love song to th
 All bodies bear the mark of a unique history and form the ground for past and future battles. The films in this threefold selection tell intimate stories, burning, dissident and unabashedly real. Often (auto)biographical, sometimes fictionalised or abstracted into the pure language of film, these shorts will take you to some of the hidden territories of sexuality.
 The third selection of Written in the Body presents two mid-length films in which sound creates pornographic images in our heads . First, Sunny Boy is a personal story about being gay in Malaysian society, and how migration to the Global North, while bringing sexual freedom, also confronts us with racism. Second, we screen Explorations, the story of Alix, to find themself through pleasure. Explorations is a celebration of anal pleasure, an invitation to find ourselves in what moves deep inside.
           </p>
-          <p class="content"><strong>Sunny Boy Sara Moralo</strong>, 2019, UK, 42’</p>
-          <p class="content"><strong>Explorations (French)Yannick</strong>, 2022, France, 34’</p>
+          <p class="content"><strong>Sunny Boy</strong>, Sara Moralo, 2019, UK, 42’</p>
+          <p class="content"><strong>Explorations</strong>, Yannick, 2022, France, 34’</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>76’</strong></p>
+          <p class="content"><a href="https://www.amsterdamalternative.nl/agenda/15242/written-in-the-body-iii">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -169,7 +179,12 @@ The third selection of Written in the Body presents two mid-length films in whic
         <div class="col-lg-4 col-10 ms-5">
           <h2 class="content"> SCREW ME / UNSCREW ME | 19:00 | De Uitkijk</h2>
           <p class="content">
-Ever fucked in a car wreck? Or played hide and seek with your lover in a deserted building? Does the cold touch of metal on your skin turn you on? What’s this thing about ruins and wrecked stuff that makes our skin blush and leaves us feeling so much more alive? At times our surroundings do not just set the scene, but play an active role in what excites and unfolds. This selection is all about dirty construction, lubricated driving shafts, gear sticks, bolts and screws. Show me all the corners of your room and fuck me like we’re a well-oiled machine.
+Ever fucked in a car wreck? Or played hide and seek with your lover in
+a deserted building? Does the cold touch of metal on your skin turn you on?
+What’s this thing about ruins and wrecked stuff that makes our skin blush and
+leaves us feeling so much more alive? At times our surroundings do not just set
+the scene, but play an active role in what excites and unfolds. This selection
+is all about dirty constructions, lubricated driving shafts, gear sticks, bolts and screws. Show me all the corners of your room and fuck me like we’re a well-oiled machine.
           </p>
           <p class="content"><strong>Besichtigung / Viewing</strong>, Jan Soldat, 2023, Austria, 4’</p>
           <p class="content"><strong>Stalking Athens</strong>, Fucking Conflicts, 2023, Germany & Greece, 11’</p>
@@ -179,6 +194,7 @@ Ever fucked in a car wreck? Or played hide and seek with your lover in a deserte
           <p class="content"><strong>Crash</strong>, Four Chambers, 2020, UK, 15’</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>68’</strong></p>
+          <p class="content"><a href="https://www.uitkijk.nl/film/porn-film-festival-amsterdam-screw-me-unscrew-me">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -191,8 +207,11 @@ Ever fucked in a car wreck? Or played hide and seek with your lover in a deserte
           <p class="content">
 This is the story of the legendary Palm Drive Video, a kinky gay porn studio run by Jack Fritscher and Mark Hemry. When the AIDS epidemic swept through San Francisco, this couple moved into a ranch in North-California and set up a home porn studio where they made a tremendous and wild array of safe-sex kinky porn tapes during the 1980s. This film is both touching and terribly amusing at times, mixing interviews with the protagonists and footage from their vast film archive. Palm Drive Video porn tapes are unique in their use of non-professional performers and the intense fetish fantasies they depict. In Raw! Uncut! Video! we discover the story of the thoughtful couple behind these films and admire the unrepeatable creative freedom they found in a faraway ranch.
           </p>
+          <p class="content"><strong>Raw! Uncut! Video!</strong>, Ryan A. White
+          and Alex Clausen, 2021, US, 79’<p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>79’</strong></p>
+          <p class="content"><a href="https://www.amsterdamalternative.nl/agenda/15264/raw-uncut-video">Bookings</a></p>
         </div>
       </div>
       <hr/>
@@ -218,8 +237,11 @@ Under supervision, participants can delve into hands-on practice, learning and e
       </div>
       <hr/>
       <div class="row sponsors mt-3 pt-2 px-2 pb-2 justify-content-center">
-        <div class="col-10 col-lg-4 mx-1 pe-lg-0 me-lg-0 align-self-center">
-          <h3>Made possible with support from:</h3>
+        <div class="col-10 col-lg-2 mx-1 pe-lg-0 me-lg-0 align-self-center">
+          <h5>made possible with support from:</h5>
+        </div>
+        <div class="col-8 col-lg-2">
+          <img src="./images/sponsor_five.jpg" class="img-fluid" />
         </div>
         <div class="col-8 col-lg-1">
           <img src="./images/sponsor_one.png" class="img-fluid" />
