--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item me-5">
+              <a class="nav-link" href="https://pornfilmfestival.amsterdam/">2025 Edition</a>
+            </li>
+            <li class="nav-item me-5">
               <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item me-5 dropdown">
